--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lenis": "^1.1.18",
